--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 # File created using '.gitignore Generator' for Visual Studio Code: https://bit.ly/vscode-gig
 
-# Created by https://www.toptal.com/developers/gitignore/api/react,windows
-# Edit at https://www.toptal.com/developers/gitignore?templates=react,windows
+# Created by https://www.toptal.com/developers/gitignore/api/windows,react,dotenv
+# Edit at https://www.toptal.com/developers/gitignore?templates=windows,react,dotenv
+
+### dotenv ###
+.env
 
 ### react ###
 .DS_*
@@ -45,7 +48,7 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# End of https://www.toptal.com/developers/gitignore/api/react,windows
+# End of https://www.toptal.com/developers/gitignore/api/windows,react,dotenv
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 
